tests/cases/compiler-development/artifact/errors/diagnostic-generic-return-substitution-mismatch.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected bool, got i64" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-return-substitution-mismatch.ari" display="tests/cases/generics/errors/generic-return-substitution-mismatch.ari" bytes=131
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-return-substitution-mismatch.ari" line=2 column=10 end_line=2 end_column=11 byte_start=43 byte_end=44 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-return-substitution-mismatch.ari:2:10\n   |\n 2 |   return 1;\n   |          ^"
